@@ -5,6 +5,7 @@ Overview of changes in lightdm 1.2.0
     * Open log files in append mode
     * Add extra checks in liblightdm so that it doesn't send invalid messages
       to the daemon
+    * Fix gdmflexiserver not being added to the path (broken since 1.1.4)
 
 Overview of changes in lightdm 1.1.9
 
